--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,9 @@
 	email = 178inaba.git@gmail.com
 [core]
 	editor = vim
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = diff-so-fancy | less --tabs=4 -RF
+[interactive]
+	diffFilter = diff-so-fancy --patch
 [color]
 	ui = true
 [color "diff-highlight"]
