--- a/.gitconfig
+++ b/.gitconfig
@@ -14,9 +14,10 @@
 	newNormal = green bold
 	newHighlight = green bold 22
 [color "diff"]
-	meta = 227
+	meta = 11
 	frag = magenta bold
-	commit = 227 bold
+	func = 146 bold
+	commit = yellow bold
 	old = red bold
 	new = green bold
 	whitespace = red reverse
