Update git config with modern defaults
- Add init.defaultBranch = main for new repositories
- Set push.default = simple for safer push behavior
- Enable fetch.prune = true for automatic cleanup of remote branches

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -37,7 +37,13 @@
 	sync = codereview sync
 [http]
 	cookiefile = ~/.gitcookies
+[init]
+	defaultBranch = main
 [pull]
 	rebase = false
+[push]
+	default = simple
+[fetch]
+	prune = true
 [include]
 	path = ~/.gitconfig.local
