--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,6 +4,7 @@
 [core]
 	editor = vim
 	pager = diff-so-fancy | less --tabs=4 -RF
+	quotepath = false
 [interactive]
 	diffFilter = diff-so-fancy --patch
 [color]
