--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,4 +14,4 @@ bind - split-window -v
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 # 256色対応
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
