Add tmux beginner-friendly configuration
- Set window and pane base index to 1
- Add Vim-style pane navigation (hjkl)
- Add pane resizing with Vim-style keys (HJKL)
- Configure Vim-style copy mode with macOS clipboard integration
- Increase scrollback history to 10000
- Reduce escape time for better Vim integration
- Add Solarized-compatible status bar styling

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,3 +15,47 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 # 256色対応
 set -g default-terminal "tmux-256color"
+
+# ウィンドウとペインのインデックスを1から開始
+set -g base-index 1
+setw -g pane-base-index 1
+
+# ウィンドウを閉じた時にインデックスを振り直し
+set -g renumber-windows on
+
+# Vimスタイルのペイン移動
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# ペインサイズの調整
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# コピーモードをVimスタイルに
+setw -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# スクロールバック履歴を増やす
+set -g history-limit 10000
+
+# ESCキーの遅延を短くする（Vim使用時に重要）
+set -sg escape-time 0
+
+# ステータスバーの設定
+set -g status-interval 1
+set -g status-position bottom
+set -g status-bg colour235
+set -g status-fg colour136
+
+# ウィンドウリストの設定
+set -g window-status-current-style "bg=colour166,fg=colour235,bold"
+set -g window-status-style "bg=colour235,fg=colour136"
+
+# セッション名とウィンドウ情報を表示
+set -g status-left '[#S] '
+set -g status-right '%Y-%m-%d %H:%M:%S'
