--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,5 +57,6 @@ set -g window-status-current-style "bg=colour166,fg=colour235,bold"
 set -g window-status-style "bg=colour235,fg=colour136"
 
 # セッション名とウィンドウ情報を表示
+set -g status-left-length 30
 set -g status-left '[#S] '
 set -g status-right '%Y-%m-%d %H:%M:%S'
