Add new-window binding to insert after current window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,9 @@ set -g mouse on
 bind | split-window -h
 bind - split-window -v
 
+# 新規ウィンドウを現在のウィンドウの直後に開く
+bind c new-window -a
+
 # リロード設定
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
