Open new panes and windows in current directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,11 +7,11 @@ bind C-a send-prefix
 set -g mouse on
 
 # ペイン分割
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # 新規ウィンドウを現在のウィンドウの直後に開く
-bind c new-window -a
+bind c new-window -a -c "#{pane_current_path}"
 
 # リロード設定
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
